--- a/spring-security-auth-server/src/main/resources/application.yml
+++ b/spring-security-auth-server/src/main/resources/application.yml
@@ -1,5 +1,7 @@
 server:
   port: 8080
+  servlet:
+    context-path: /authServer
 
 spring:
   datasource:
@@ -7,7 +9,10 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     password: 12345678
     url: jdbc:mysql://localhost:3306/spring-security-demo?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8
-
+  redis:
+    host: localhost
+    database: 0
+    password: wanghuan
 mybatis:
   mapper-locations: classpath:/mapper/*.xml
 
